// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary for 0 items 1`] = `
<div>
  <h3>
    Viewing 
    0
     expenses totalling
     
    0.00
     PLN
  </h3>
</div>
`;

exports[`should render ExpensesSummary for 3 items 1`] = `
<div>
  <h3>
    Viewing 
    3
     expenses totalling
     
    2301.95
     PLN
  </h3>
</div>
`;
